--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -1,6 +1,6 @@
 body {
   background-color: #f5f7fa;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Poppins", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   height: 100vh;
   display: flex;
   justify-content: center;
